--- a/assets/css/material-kit.css
+++ b/assets/css/material-kit.css
@@ -3190,7 +3190,11 @@ h2.title {
 }
 
 .header-filter {
-  position: relative;
+  height:100% !important;
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
 }
 .header-filter:after {
   position: absolute;
@@ -3315,6 +3319,11 @@ h2.title {
 }
 .landing-page .wrapper {
   background: #CCCCCC;
+  overflow:none;
+}
+
+.wrapper {
+  padding-top:100vh;
 }
 
 .profile-page .header {
