--- a/Squares/assets/css/grid.css
+++ b/Squares/assets/css/grid.css
@@ -2,6 +2,7 @@ body{
   background:url('../img/background.jpg');
   background-size: cover;
   background-attachment: fixed;
+  width:100%;
 }
 .col{
     display: inline-flex;
